--- a/sample.env
+++ b/sample.env
@@ -6,3 +6,14 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=1234
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
+
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+EMAIL_HOST_USER='test@gmail.com'
+EMAIL_HOST_PASSWORD='your app password'
+DEFAULT_FROM_EMAIL='test@gmail.com'
+
+CELERY_BROKER="redis://localhost:6379/0"
+REDIS_URL="redis://localhost:6379/0"
