--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,5 +59,6 @@ jobs:
       run: |
         python manage.py migrate
 
-#    - name: Run Tests
-#      run: python manage.py test
+    - name: Run Tests
+      run: |
+        python manage.py test delivery.tests
