--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,13 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 drf-yasg==1.21.14
 inflection==0.5.1
+iniconfig==2.3.0
 kombu==5.6.2
 packaging==26.0
+pluggy==1.6.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
+Pygments==2.19.2
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
